New distributions and functionalities
+ NonUniform distr
+ Binomial distr
+ tooltips for distributions (excepting exponential - TODO!!!)
+ different way of selecting distributions - a combobox
+ exit app button

--- a/Proiect_MS(PS)/Proiect_MS(PS)/Proiect_MS(PS).csproj
+++ b/Proiect_MS(PS)/Proiect_MS(PS)/Proiect_MS(PS).csproj
@@ -68,6 +68,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Convertors\cbFontSizeConv.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -100,24 +101,35 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Scripts\Bernoulli.py">
+    <Content Include="Scripts\Bernoulli.py">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="Scripts\Exponentiala.py">
+    </Content>
+    <Content Include="Scripts\Geometric.py">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="Scripts\Geometric.py">
+    </Content>
+    <Content Include="Scripts\main.py">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="Scripts\main.py">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="Scripts\script.py">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="Scripts\Uniforma.py">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Resource>
+    </Content>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Scripts\Binomial.py">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Scripts\Exponential.py">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Scripts\NonUniform.py">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Scripts\Uniform.py">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Resource Include="ToolTips\bern.jpg" />
+    <Resource Include="ToolTips\bin.jpg" />
+    <Resource Include="ToolTips\geom.jpg" />
+    <Resource Include="ToolTips\neunif.jpg" />
+    <Resource Include="ToolTips\unif.jpg" />
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
